      suggestion.
    + [CL] Include the line number when warning about instances of
      override_dh_clean targets that are missing calls to dh_clean.
    + [CL] Apply patch from Paul Tagliamonte to check for files
      that use DH_EXTRA_ADDONS. Thanks!  (Closes: #885790)
    + [CL] Update $PYTHON3X_DEPEND to prevent false positives in
      missing-python-build-dependency.  (Closes: #750537)
  * checks/source-copyright.desc:
    + [CL] Also mention that we check for NOTICE.gz files when looking for
      Apache 2.0 packages that do not distribute their accompanying NOTICE
      file.
  * checks/watch-file.{desc,pm}:
    + [CL] Apply patch from Felix Lechner <felix.lechner@lease-up.com> to
      check for packages where an upstream signature exists but is not
      being used.  (Closes: #885621)

  * data/files/python-generic-modules:
    + [CL] Add "examples".
  * data/standards-version/release-dates:
    + [CL] Correct date(1) invocation example in comment.
    + [CL] Add 4.1.3 as a known standards version.

  * debian/control:
    + [CL] Declare compliance with Debian Policy 4.1.3.
    + [CL] Mention Debian Policy 4.1.3 in long package description.

 -- Chris Lamb <lamby@debian.org>  Tue, 26 Dec 2017 15:34:26 +0000

lintian (2.5.66) unstable; urgency=medium

  Merry Christmas!

  * Summary of tag changes:
    + Added:
      - autotools-pkg-config-macro-not-cross-compilation-safe
      - bugs-field-does-not-refer-to-debian-infrastructure
      - mismatched-python-substvar
      - missing-notice-file-for-apache-license
      - override_dh_clean-does-not-call-dh_clean
      - package-contains-python-doctree-file
      - pkg-config-unavailable-for-cross-compilation
      - portable-executable-missing-security-features
      - python-package-depends-on-package-from-other-python-variant
      - vcs-fields-use-more-than-one-vcs

  * checks/*.desc:
    + [CL] Standardise on capital-L "Lintian" in package descriptions.