@@ -30,6 +30,9 @@ lintian (2.5.67) UNRELEASED; urgency=medium
       that use DH_EXTRA_ADDONS. Thanks!  (Closes: #885790)
     + [CL] Update $PYTHON3X_DEPEND to prevent false positives in
       missing-python-build-dependency.  (Closes: #750537)
+  * checks/scripts.pm:
+    + [CL] Include the offending/unknown shebang in the output of various
+      interpreter-relateed tags.  (Closes: #673734)
   * checks/source-copyright.desc:
     + [CL] Also mention that we check for NOTICE.gz files when looking for
       Apache 2.0 packages that do not distribute their accompanying NOTICE
